<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="selected_date">Selected Date</string>
    <string name="_0">0</string>
    <string name="in_minutes_till_date">In Minutes Till Date</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="select_date">SELECT DATE</string>
    <string name="in_minutes">IN MINUTES</string>
</resources>